clang/test/BSC/Negative/SafeZone/identical_declspec/identical_declspec.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// UNSUPPORTED: ENABLE_BSC_FUTURE

// Now valid as mixed mode declaration
_Unsafe int add(int x, int y);
_Safe int add(int x, int y) {  // ok: mixed mode compatible
  return x + y;
}

_Safe int g_a;   // expected-error {{'_Safe' can only appear before on function or statement or parenthesized expression}}
_Safe struct b {  // expected-error {{'_Safe' can only appear before on function or statement or parenthesized expression}}
  int a;
};
_Safe enum c {   // expected-error {{'_Safe' can only appear before on function or statement or parenthesized expression}}
  TA,
  TB,
  TC
};

_Unsafe int (*pp)(int x, int y); // expected-note {{previous definition is here}}
_Safe int (*pp)(int x, int y);  // expected-error {{redefinition of 'pp' with a different type: '_Safe int (*)(int, int)' vs 'int (*)(int, int)'}}

_Safe int safun(int x, int y) {
  return 0;
}
_Unsafe int unfun(int x, int y) {
  return 0;
}
int fun(int x, int y) {
  return 0;
}

_Safe int (*sapfun)(int x, int y);
_Unsafe int (*unpfun)(int x, int y);
int (*pfun)(int x, int y);

int main() {
  _Unsafe int (*qq)(int x, int y); // expected-note {{previous definition is here}}
  _Safe int (*qq)(int x, int y);   // expected-error {{redefinition of 'qq' with a different type: '_Safe int (*)(int, int)' vs 'int (*)(int, int)'}}
                                  // expected-error@-1 {{uninitialized declarator is forbidden in the safe zone}}

  sapfun = safun;
  sapfun = unfun;  // expected-error {{conversion from type 'int (*)(int, int)' to '_Safe int (*)(int, int)' is forbidden}}
  // expected-note@-1 {{assigning an unsafe function pointer to a safe function pointer type is not allowed}}
  sapfun = fun;    // expected-error {{conversion from type 'int (*)(int, int)' to '_Safe int (*)(int, int)' is forbidden}}
  // expected-note@-1 {{assigning an unsafe function pointer to a safe function pointer type is not allowed}}

  unpfun = safun;  
  unpfun = unfun;
  unpfun = fun;

  pfun = safun;    
  pfun = unfun;
  pfun = fun;

_Safe {
  // Note: Global variable modification restriction requires ENABLE_BSC_FUTURE
  unpfun = safun;   
  unpfun = unfun;
  unpfun = fun;
}

return 0;
}